Modal Top Spacing fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -725,7 +725,7 @@ modal-overlay{
 .modal{
   z-index:1050;
   max-height:inherit;
-  margin:155px auto;
+  margin:80px auto 230px;
   background:#fff;
   width:960px;
   max-width:100%;
